--- a/packages/design-docs/stories/DesignSystem/GetStartedMigrationKit/React.mdx
+++ b/packages/design-docs/stories/DesignSystem/GetStartedMigrationKit/React.mdx
@@ -14,15 +14,14 @@ import "../../../src/styles/Police.css";
 <Meta title="Design system/Get Started - Kit de migration/React" />
 
 <div className="docs">
-    <HeaderComponent title="Migration depuis Material UI" />
-    
-    <Body>
-        <Accordion title="Introduction" id="introduction">
-            <div style={{ display: "flex", flexDirection: "column", gap: "24px", padding: "4px 8px" }}>
-                <Paragraph>Ce guide compare l'architecture et les conventions de nommage de **Material UI (MUI)** avec celles du **Design System RTE**. Si vous migrez depuis Material UI, cette documentation vous aidera à comprendre les différences fondamentales entre les deux systèmes.</Paragraph>
-            </div>
-        </Accordion>
+    <div>
+        <HeaderComponent title="Migration depuis Material UI" />
+        <div style={{ display: "flex", flexDirection: "column", gap: "24px" }}>
+            <Paragraph>Ce guide compare l'architecture et les conventions de nommage de **Material UI (MUI)** avec celles du **Design System RTE**. Si vous migrez depuis Material UI, cette documentation vous aidera à comprendre les différences fondamentales entre les deux systèmes.</Paragraph>
+        </div>
+    </div>
 
+    <Body>
         <Accordion title="Différences architecturales" id="architectural-differences">
             <div style={{ display: "flex", flexDirection: "column", gap: "24px", padding: "4px 8px" }}>
                 <DocsSection title="Modèle de composants" headingLevel={3}>
