--- a/packages/design-docs/stories/DesignSystem/GetStartedStartupKit/Angular.mdx
+++ b/packages/design-docs/stories/DesignSystem/GetStartedStartupKit/Angular.mdx
@@ -13,15 +13,15 @@ import "../../../src/styles/Police.css";
 <Meta title="Design system/Get Started - Kit de démarrage/Angular" />
 
 <div className="docs">
-    <HeaderComponent title="Démarrage avec Angular" />
+    <div>
+        <HeaderComponent title="Démarrage avec Angular" />
+        <div style={{ display: "flex", flexDirection: "column", gap: "24px" }}>
+            <Paragraph>Le **Design System RTE** est une bibliothèque de composants **Angular** qui permet d'unifier le comportement et l'apparence des interfaces utilisateur à travers les équipes de **RTE France**.</Paragraph>
+            <Paragraph>Il est organisé en monorepo avec trois packages principaux. Le package <code>@design-system-rte/core</code> contient les design tokens et interfaces partagées, tandis que <code>@design-system-rte/angular</code> fournit les composants **Angular** spécifiques. Cette architecture permet une maintenance centralisée tout en offrant des implémentations optimisées pour chaque framework.</Paragraph>
+        </div>
+    </div>
     
     <Body>
-        <Accordion title="Introduction" id="introduction">
-            <div style={{ display: "flex", flexDirection: "column", gap: "24px", padding: "4px 8px" }}>
-                <Paragraph>Le **Design System RTE** est une bibliothèque de composants **Angular** qui permet d'unifier le comportement et l'apparence des interfaces utilisateur à travers les équipes de **RTE France**.</Paragraph>
-                <Paragraph>Il est organisé en monorepo avec trois packages principaux. Le package <code>@design-system-rte/core</code> contient les design tokens et interfaces partagées, tandis que <code>@design-system-rte/angular</code> fournit les composants **Angular** spécifiques. Cette architecture permet une maintenance centralisée tout en offrant des implémentations optimisées pour chaque framework.</Paragraph>
-            </div>
-        </Accordion>
 
         <Accordion title="Installation" id="installation">
             <div style={{ display: "flex", flexDirection: "column", gap: "24px", padding: "4px 8px" }}>
