fix (docs): add missing link to Icons docs page

--- a/packages/design-docs/stories/Fundations/Icons/Icons.mdx
+++ b/packages/design-docs/stories/Fundations/Icons/Icons.mdx
@@ -147,7 +147,7 @@ import IconSizeTable from "./assets/IconSizeTable.svg";
             </DocsSection>
             <DocsSection title="Comment contribuer ?" headingLevel={3}>
                 <ol>
-                    <li>**Se rendre sur la page Figma : 🚧 Propositions/Validations en cours.**</li><br/>
+                    <li>**Se rendre sur la page Figma : 🚧 <a className="docs-link" href="https://www.figma.com/design/tKntdNwiF1x3jSpJ9Q0O0q/01.3-Iconography"><strong>Propositions/Validations en cours.</strong></a></li><br/>
                     <li>**Vérifier que l’icône qui vous manque n’a pas déjà été proposée. Si c’est le cas, ajouter un ❤️ à côté de cette icône.**<br/>
                     <em>Cela nous permet d’évaluer l’universalité du besoin.</em><br/><br/>
                     **Sinon continuer à l’étape suivante.**</li><br/>
