feat (docs): add presentation video to home page

--- a/packages/design-docs/stories/DesignSystem/Home/Home.mdx
+++ b/packages/design-docs/stories/DesignSystem/Home/Home.mdx
@@ -2,8 +2,10 @@ import { Meta } from "@storybook/blocks";
 import React from "react";
 import Header from "./components/Header";
 import MainContent from "./components/MainContent";
+import PresentationVideo from "./components/PresentationVideo";
 
 <Meta title="Design system/Accueil" />
 
 <Header />
 <MainContent />
+<PresentationVideo />
