--- a/packages/design-docs/stories/DesignSystem/GetStartedStartupKit/React.mdx
+++ b/packages/design-docs/stories/DesignSystem/GetStartedStartupKit/React.mdx
@@ -49,6 +49,7 @@ import "../../../src/styles/Police.css";
                     <Paragraph>Importez les styles de base du design system dans votre point d'entrée principal (généralement <code>main.tsx</code> ou <code>index.tsx</code>).</Paragraph>
 
                     ```typescript
+                    import "@design-system-rte/core/css/rte-fonts.css";
                     import "@design-system-rte/react/style.css";
 
                     createRoot(document.getElementById("root")!).render(
