--- a/packages/react/src/components/button/stories/Button.mdx
+++ b/packages/react/src/components/button/stories/Button.mdx
@@ -13,7 +13,10 @@ import ComponentDocs from "../../../../../design-docs/src/components/ComponentDo
     </p>
   }
   linkFigma="https://www.figma.com/design/Oe33roVZDpZNXWlEn25Z7x/02.0-Storybook?node-id=863-32210&t=vEppdy5BrYs5DO3z-4"
-  linkGithub="https://github.com/rte-france/design-system-rte/tree/main/packages/react/src/components/button"
+  linkGithub={{
+    react: "https://github.com/rte-france/design-system-rte/tree/main/packages/react/src/components/button",
+    angular: "https://github.com/rte-france/design-system-rte/tree/main/packages/angular/projects/ds-rte-lib/src/lib/components/button"
+  }}
   disponibility={{
     design: {
       figma: true,
