--- a/packages/design-docs/stories/DesignSystem/GetStartedStartupKit/React.mdx
+++ b/packages/design-docs/stories/DesignSystem/GetStartedStartupKit/React.mdx
@@ -26,7 +26,7 @@ import "../../../src/styles/GeneralDocs.scss";
         <Accordion title="Installation" id="installation">
             <div style={{ display: "flex", flexDirection: "column", gap: "24px", padding: "4px 8px" }}>
                 <Paragraph>Pour installer le design system dans votre projet **React**, exécutez la commande suivante :</Paragraph>
-                
+
                 ```bash
                 npm install @design-system-rte/react
                 ```
@@ -48,8 +48,8 @@ import "../../../src/styles/GeneralDocs.scss";
                     <Paragraph>Importez les styles de base du design system dans votre point d'entrée principal (généralement <code>main.tsx</code> ou <code>index.tsx</code>).</Paragraph>
 
                     ```typescript
-                    import "@design-system-rte/core/css/rte-fonts.css";
                     import "@design-system-rte/react/style.css";
+                    import "@design-system-rte/core/css/rte-fonts.css";
 
                     createRoot(document.getElementById("root")!).render(
                       <StrictMode>
@@ -61,10 +61,11 @@ import "../../../src/styles/GeneralDocs.scss";
 
                 <DocsSection title="Ajouter le mixin Branding/Theme" headingLevel={3}>
                     <Paragraph>Incluez le mixin **branding/theme** dans votre fichier `.scss` principal (généralement `styles.scss` ou `index.scss` à la racine de votre projet). Cela créera une portée de style pour les composants.</Paragraph>
-                    <Paragraph className="light-gray">(Si vous n'avez pas de support scss, vous pouvez utiliser les fichiers .css dans <code>@design-system-rte/core/css/rte-themes.css</code> et les ajouter à votre fichier de styles principal).</Paragraph>
+                    <Paragraph className="light-gray">(Si vous n'avez pas de support scss, vous pouvez utiliser les fichiers .css dans <code>@design-system-rte/core/css/rte-themes.css</code> et les ajouter à votre fichier principal (<code>main.tsx</code> ou <code>index.tsx</code>)).</Paragraph>
 
                     ```scss
-                    @use "@design-system-rte/core/design-tokens/tokens/mixins" as *;
+                     @use "@design-system-rte/core/design-tokens/main" as *;
+                    @use "@design-system-rte/core/design-tokens/fonts" as *;
 
                     @include theme-selector('bleu_iceberg', 'light');
                     ```
@@ -104,7 +105,7 @@ import "../../../src/styles/GeneralDocs.scss";
                   };
 
                   return (
-                    <Button 
+                    <Button
                       label="Click me"
                       variant="primary"
                       size="m"
@@ -168,4 +169,5 @@ import "../../../src/styles/GeneralDocs.scss";
             </div>
         </Accordion>
     </Body>
+
 </div>
